--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@frogress/line": "^1.2.2",
     "@ramonak/react-progress-bar": "^5.0.3",
+    "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.0"
+    "react-router-dom": "^6.14.0",
+    "react-scroll": "^1.8.9",
+    "react-type-animation": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
